tests/test_input_files/good/test_good_var_decl_3.punkt
main {
	var x = 5.
	{
		print x.
		var x = 6.
		print x.
		x = x + 4.
		print x.
	}
	print x.
}
