tests/test_input_files/bad/test_bad_array_17.punkt
main {
	var x = sizeof 5.
}
